trying out markdown text

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-fred fartsalot
+# this is an H1
 
+alex is being very nice for teaching me how to program
+
+some more sample text. some more sample text. some more sample text. some more sample text. some more sample text. some more sample text. some more sample text. some more sample text. some more sample text. 
